--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy documentation to github pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: documentation/public # The folder the action should deploy.
+          folder: public # The folder the action should deploy.
 
   # deploy:
   #   name: deploy
